Calculets connection list height based on default font height. Minimum height is 28 pixels.

BUG: 271491
FIXED-IN: nm09